@@ -1,4 +1,4 @@
-rev_17-Apr_01-07_46
+rev_17-Apr_04-11_15
 
 Switched dafault filebrowser settings to all and ckgedit
 
@@ -42,3 +42,5 @@ fix for guest use of specialized buttons when captcha is on
 Apr 1
 syncs with master pull #9: remove extraneous / from fileurl in script.js
 
+Apr 1
+Moved js from in action/mediamanager.php to script: scripts/mediamgr.js
